# simplay

./: .gitignore  Cargo.toml  README.md
src/: config.rs  daemon.rs  main.rs  player.rs  protocol.rs  subsonic.rs
systemd/: simplay.service
